# DataReel

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: common.h.CF844774AF42B8EB.idx  config.c.DDB02B751F5E266A.idx  config.h.326893D092CDDCA2.idx  download_engine.c.0D3C315E758111CE.idx  download_engine.h.342112E61C3402AD.idx  download_item_widget.c.259239422B78A365.idx  download_item_widget.h.B42EBC4411D54761.idx  download_options.c.EC7F86CB906A4AC3.idx  download_options.h.6D93DCF8441CEDC4.idx  download_row.c.6480D20AE3A9669A.idx  download_row.h.49F8E7AD3975693A.idx  downloader.c.FC45FED22DC51E7D.idx  downloader.h.C3E50E5D81A7E203.idx  main.c.49F337CEC623D17D.idx  main_window.c.1CD549C651C952C9.idx  main_window.h.7F8BFD5CCCECD7A8.idx  metadata_fetcher.c.40955DBE5FA8A20B.idx  metadata_fetcher.h.EDF12CD8D1C3A390.idx  process_manager.c.ED3DE9E7A022FDCA.idx  process_manager.h.D9965FE421C8CFF3.idx  settings_panel.c.B199214CDA4A8070.idx  settings_panel.h.3D7CFB542F4DB36A.idx  string_utils.c.8B80C2D6D7D837AE.idx  string_utils.h.1127623EA8CCB2E1.idx  ytdlp_manager.c.EA3FB20521154DFE.idx  ytdlp_manager.h.1716426D92DDF4A7.idx
include/: common.h
resources/: style.css
ressources/: app.gresource.xml
ressources/ui/: window.ui
src/: main.c
src/app/: main.c
src/core/: download_engine.c  download_engine.h  downloader.c  downloader.h  metadata_fetcher.c  metadata_fetcher.h  process_manager.c  process_manager.h  ytdlp_manager.c  ytdlp_manager.h
src/downloaders/: downloader_interface.h  downloader_registry.c  youtube_downloader.c  youtube_downloader.h
src/ui/: CMakeLists.txt  download_item_widget.c  download_item_widget.h  download_options.c  download_options.h  download_panel.c  download_panel.h  download_row.c  download_row.h  main_window.c  main_window.h  menubar.c  menubar.h  settings_panel.c  settings_panel.h  sidebar.c  sidebar.h  theme.h
src/utils/: config.c  config.h  string_utils.c  string_utils.h
